--- a/home.html
+++ b/home.html
@@ -448,6 +448,7 @@
 </header>
 
 
+
 <main>
         <div id="smooth-wrapper">
             <div id="smooth-content">
@@ -482,6 +483,7 @@
 </section>
 
 
+<h1> Testing Github</h1>
 
 
 
