--- a/home.html
+++ b/home.html
@@ -483,6 +483,8 @@
 </section>
 
 
+<h1>Testing Git</h1>
+
 <!-- GT About Section Start -->
 
 <section class="gt-about-section fix section-padding py-5">
