--- a/home.html
+++ b/home.html
@@ -1049,6 +1049,7 @@
         <div class="grid-container">
 
           <input
+            id="firstNameInput"
             placeholder="First Name"
             type="text"
             name="firstName"
@@ -1056,12 +1057,14 @@
             required
           />
           <input
+            id="lastNameInput"
             placeholder="Last Name"
             type="text"
             name="lastName"
             class="grid-item-2"
           />
             <input
+            id="phoneInput"
             placeholder="Phone Number"
             type="tel"
             name="phone"
@@ -1071,6 +1074,7 @@
             />
 
           <input
+            id="emailInput"
             placeholder="Email"
             type="email"
             name="email"
@@ -1078,6 +1082,7 @@
             required
           />
           <textarea
+            id="messageInput"
             placeholder="Type Your Message"
             name="message"
             class="grid-item-5"
@@ -1097,11 +1102,13 @@
             </label>
           </div>
 
-          <!-- reCAPTCHA v2 -->
+
+          <!-- reCAPTCHA v2 >
           <div
             class="recaptcha-wrapper g-recaptcha mt-3 grid-item-7"
             data-sitekey="6LdKp1grAAAAANb7Dg8nQnEYvuQqysrPWwz8j19M"
-          ></div>
+          ></div-->
+          
 
           <div class="gt-hero-button wow animated-image mt-3 grid-item-8">
             <button id="submitButton" type="submit" class="gt-theme-btn">Submit</button>
@@ -1112,8 +1119,7 @@
     </div>
   </div>
 </section>
-
-<!-- reCAPTCHA and EmailJS scripts -->
+<!-- reCAPTCHA and EmailJS scripts >
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
@@ -1148,6 +1154,37 @@ document.getElementById("contact-form").addEventListener("submit", function (e) 
     });
 });
 
+</script-->
+<!-- contact scripts -->
+ <script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const contactForm = document.getElementById('contact-form');
+    if (contactForm) {
+      contactForm.addEventListener('submit', function(e) {
+        e.preventDefault();
+        const firstname = document.getElementById('firstNameInput').value.trim();
+        const lastname = document.getElementById('lastNameInput').value.trim();
+        const email = document.getElementById('emailInput').value.trim();
+        const message = document.getElementById('messageInput').value.trim();
+        if (!email || !firstname || !lastname || !message) {
+          alert('Please fill in all fields.');
+          return;
+        }
+        fetch('/submit', {
+          method: 'POST',
+          headers: {'Content-Type': 'application/json'},
+          body: JSON.stringify({ firstname, lastname, email, message })
+        })
+        .then(res => res.text())
+        .then(text => {
+          alert(text);
+        })
+        .catch(() => {
+          alert('Error sending magic link.');
+        });
+      });
+    }
+  });
 </script>
 
 
