--- a/services.html
+++ b/services.html
@@ -401,6 +401,9 @@
                                     <li class="has-dropdown d-none d-xl-block">
                                         <a href="services.html">Services</a>
                                     </li>
+                                    <li class="has-dropdown d-none d-xl-block">
+                                        <a href="services-v2.html">Services Version 2</a>
+                                    </li>
                                     <li class="d-none d-xl-block">
                                         <a href="projects.html">Projects</a>
                                     </li>
