--- a/company.html
+++ b/company.html
@@ -109,6 +109,16 @@
         <div class="mouseCursor cursor-outer"></div>
         <div class="mouseCursor cursor-inner"></div>
 
+<style>
+  @media (max-width: 1024px) {
+  .mouseCursor {
+    display: none !important;
+  }
+}
+
+</style>
+
+
         <!-- Offcanvas Area Start -->
  <div class="fix-area">
             <div class="offcanvas__info">
@@ -742,7 +752,7 @@
   <div class="row align-items-center justify-content-center">
     
     <!-- Left Content -->
-    <div class="col-lg-8 col-12 text-center text-lg-start">
+    <div class="col-lg-8 col-12 text-center text-lg-start tx-title sec_title tz-itm-title tz-itm-anim">
       <h2 class="fw-bold mb-3">Security & Compliance</h2>
       <p class="lead mb-4">
         We adhere to internationally recognized security and compliance standards to meet the needs of game studios, publishers, and production partners.
@@ -946,7 +956,7 @@
 <section class="hide-on-small">
   <div class="test-Card">
     <div class="test-left">
-                <div class="m-5">
+                <div class="m-5 tx-title sec_title tz-itm-title tz-itm-anim">
             <h2> Let’s Build Together </h2>
         </div>
     </div>
