--- a/services-v2.html
+++ b/services-v2.html
@@ -527,7 +527,7 @@
 
                         </div>
                     </div>
-                    <h4 class="gt-gaming-text">
+                    <h4 class="gt-gaming-text tx-title sec_title tz-itm-title tz-itm-anim">
                                 <span class="mb-4"> The Entity Studios, we deliver animation pipelines that fit directly into your development workflow.
                                 From high-end rigging to engine integration, our services are crafted by industry veterans to support AAA precision and indie flexibility alike.
                                     </span><div style="height: 10px;"></div>
@@ -1221,7 +1221,7 @@
 
 .vertical-text2 {
   position: absolute;
-  top: 50%;
+  top: 55%;
   right: -180px;  /* Push completely outside container */
   transform: translateY(-50%) rotate(-90deg);
   transform-origin: left top;
@@ -1423,7 +1423,7 @@
 <section class="hide-on-small">
   <div class="test-Card">
     <div class="test-left">
-                <div class="m-5">
+                <div class="m-5 tx-title sec_title tz-itm-title tz-itm-anim">
             <h2> Let’s Build Together </h2>
         </div>
     </div>
