--- a/services.html
+++ b/services.html
@@ -109,6 +109,16 @@
         <div class="mouseCursor cursor-outer"></div>
         <div class="mouseCursor cursor-inner"></div>
 
+<style>
+  @media (max-width: 1024px) {
+  .mouseCursor {
+    display: none !important;
+  }
+}
+
+</style>
+
+
         <!-- Offcanvas Area Start -->
  <div class="fix-area">
             <div class="offcanvas__info">
@@ -1017,7 +1027,7 @@
 <section class="hide-on-small">
   <div class="test-Card">
     <div class="test-left">
-                <div class="m-5">
+                <div class="m-5 tx-title sec_title tz-itm-title tz-itm-anim">
             <h2> Let’s Build Together </h2>
         </div>
     </div>
