--- a/404.html
+++ b/404.html
@@ -112,6 +112,16 @@
         <div class="mouseCursor cursor-outer"></div>
         <div class="mouseCursor cursor-inner"></div>
 
+<style>
+  @media (max-width: 1024px) {
+  .mouseCursor {
+    display: none !important;
+  }
+}
+
+</style>
+
+
         <!-- Offcanvas Area Start -->
  <div class="fix-area">
             <div class="offcanvas__info">
