--- a/services-v2.html
+++ b/services-v2.html
@@ -803,7 +803,7 @@
                                 <img src="assets/img/home-1/service/animationservice1.gif" alt="img">
                             </div>
                             <div class="gt-news-content text-center ">
-                                    <h3>Animation Services</h3>
+                                    <h3>Animation Solutions</h3>
                                     <i class="fa-solid fa-arrow-right"></i>
                                   </a>
                             </div>
@@ -816,7 +816,7 @@
                                 <img src="assets/img/home-1/service/animationservice2.gif" alt="img">
                             </div>
                             <div class="gt-news-content text-center">
-                                  <h3>Motion Capture Solutions</h3>
+                                  <h3>Mocap Solutions</h3>
                                   <i class="fa-solid fa-arrow-right"></i>
                                 </a>
                             </div>
