--- a/company.html
+++ b/company.html
@@ -817,6 +817,48 @@
 
 
 
+<!-- GT Newsletter Section Start -->
+<section class="gt-newsletter-section fix mb-4 position-relative">
+  <div class="container py-5">
+    <div class="gt-newsletter-wrapper bg-cover position-relative d-flex justify-content-between text-end p-5"
+         style="background-image: url(assets/img/home-1/cta/newsletter-bg.avif);">
+
+      <!-- Bottom-center aligned drive image -->
+      <div class="shape position-absolute bottom-0 start-50 translate-middle-x">
+        <img src="assets/img/home-1/cta/drive.avif" alt="img">
+      </div>
+
+      <!-- Left-aligned content -->
+      <div class="gt-games-content text-start" style="max-width: 500px;">
+        <h3 class="text-white tx-title sec_title tz-itm-title tz-itm-anim">
+          Learn about
+        </h3>
+        <div class="gt-button top_view_2 item-hover mt-3">
+          <a href="projects.html" class="gt-theme-btn gt-style-border">
+            Our Services
+          </a>
+        </div>
+      </div>
+
+      <!-- Right-aligned content -->
+      <div class="gt-games-content text-end" style="max-width: 500px;">
+        <h3 class="text-white tx-title sec_title tz-itm-title tz-itm-anim">
+          Learn about
+        </h3>
+        <div class="gt-button top_view_2 item-hover mt-3">
+          <a href="projects.html" class="gt-theme-btn gt-style-border">
+            Our Projects
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+
+
         <!-- GT Marque Section Start -->
         <div class="gt-marque-section">
             <div class="overlay-shape">
