--- a/home.html
+++ b/home.html
@@ -482,9 +482,11 @@
             Let’s collaborate to accelerate your game development with confidence and unmatched flexibility.
           </h6>
           <div class="gt-hero-button wow animated-image mt-4">
-            <a href="company.html" class="gt-theme-btn btn px-4 py-2">
-              Learn more
-            </a>
+<button class="scroll-to-about gt-theme-btn btn px-4 py-2 icon">
+  Learn more
+</button>
+
+
           </div>
         </div>
       </div>
@@ -507,7 +509,7 @@
             <div class="row g-4">
                 <div class="col-lg-5">
                     <div class="gt-about-content">
-                        <div class="gt-section-title mb-0">
+                        <div id="about" class="gt-section-title mb-0">
                             <h6 class="subtitle tz-sub-tilte tz-sub-anim  text-uppercase tx-subTitle">
                                about us
                             </h6>
@@ -1042,6 +1044,65 @@
   const logos = track.innerHTML;
   track.innerHTML += logos; // Duplicate once for seamless scroll
 </script>
+
+<section class="gaming-hero-section">
+  <div class="gaming-overlay d-flex flex-column justify-content-center align-items-center text-center position-relative">
+    
+    <!-- Centered Text Content -->
+    <div class="text-white p-5">
+      <h2 class="display-5 fw-bold" style="color: red;">Level Up With Us</h2>
+      <p class="lead">We build immersive experiences for the next generation of gamers.</p>
+      <a href="company.html" class="btn gt-theme-btn btn-lg mt-4">Visit Company Page</a>
+    </div>
+
+    <!-- Left Rotated Image -->
+    <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image">
+
+    <!-- Right Image -->
+    <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image">
+
+  </div>
+</section>
+
+<style>
+.gaming-hero-section {
+  background-image: url('assets/img/home-2/cta/cta-bg2.jpg');
+  background-size: 100% 100%; /* force-fit background to section */
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: auto;
+  height: auto;
+  position: relative;
+  overflow: hidden;
+  margin: 0;  /* remove potential outside spacing */
+  padding: 0; /* remove inside spacing */
+}
+
+.gaming-overlay {
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+  box-sizing: border-box;
+}
+
+
+.side-image {
+  position: absolute;
+  max-height: 300px;
+  height: auto;
+}
+
+.left-image {
+  left: 0;
+  bottom: 0;
+}
+
+.right-image {
+  right: 0;
+  bottom: 0;
+}
+</style>
 
 
 
@@ -1674,9 +1735,23 @@ document.getElementById("contact-form").addEventListener("submit", function (e) 
 
 
 
-
                 <script>
         document.addEventListener('DOMContentLoaded', function () {
+            
+      gsap.registerPlugin(ScrollToPlugin);
+      document.querySelectorAll('.scroll-to-about').forEach(button => {
+        button.addEventListener('click', (e) => {
+          e.preventDefault();
+          gsap.to(window, {
+            scrollTo: {
+              y: "#about",
+              offsetY: 100
+            },
+            duration: 1,
+            ease: "power2.out"
+          });
+        });
+      });
             const consent = JSON.parse(localStorage.getItem("cookieConsent"));
 
             // GTAG tracking
@@ -1702,6 +1777,8 @@ document.getElementById("contact-form").addEventListener("submit", function (e) 
                 this.submit();
                 });
             }
+
+
 
             window.addEventListener('scroll', function scrollHandler() {
                 const scrollPercentage = (window.scrollY + window.innerHeight) / document.documentElement.scrollHeight * 100;
