--- a/services-v2.html
+++ b/services-v2.html
@@ -1034,7 +1034,7 @@
       <div id="lottie-top-animation" class="position-absolute"></div>
 
  <!-- Overlay paragraph -->
-  <h5 class="overlay-text text-center mb-5">From keyframe to engine-ready, our animations are crafted for expressive performance and seamless <br> real-time integration, powering everything from gameplay to cinematics.</h5>
+  <h5 class="overlay-text text-center mb-5 tz-itm-title tz-itm-anim">From keyframe to engine-ready, our animations are crafted for expressive performance and seamless <br> real-time integration, powering everything from gameplay to cinematics.</h5>
 
       <!-- Swiper slider for services -->
       <div id="services"  class="swiper gt-service-slider">
@@ -1147,7 +1147,7 @@
   <div id="lottie-top-animation-duplicate"></div>
 
   <!-- ✅ Overlay paragraph -->
-  <p class="overlay-text2 d-flex">From raw capture data to polished performance, our mocap solutions deliver clean, expressive animation,  <br>ready for seamless integration across gameplay, cinematics, and virtual production.</p>
+  <p class="overlay-text2 d-flex tz-itm-title tz-itm-anim">From raw capture data to polished performance, our mocap solutions deliver clean, expressive animation,  <br>ready for seamless integration across gameplay, cinematics, and virtual production.</p>
 
   <!-- Container for the content -->
   <div class="container" style="max-width: 1200px;">
